--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -16,14 +15,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Chat_app"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.edit.EditActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.password.PasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.information.InformationActivity"
+            android:exported="false" />
+
         <service
             android:name=".service.MyService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
-            android:enabled="true"
             android:name=".ui.chat.ChatActivity"
+            android:enabled="true"
             android:exported="false" />
         <activity
             android:name=".ui.auth.AuthActivity"
